# oute.me

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  PLAN-admin-dashboard.docx  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: launch.json
apps/ai/: Dockerfile  pyproject.toml  ruff.toml
apps/ai/src/: config.py  main.py  middleware.py
apps/ai/src/crew/: agents.yaml  estimate_crew.py  tasks.yaml  tools.py
apps/ai/src/models/: estimate.py  interview.py
apps/ai/src/routers/: admin.py  chat.py  estimate.py  health.py  knowledge.py
apps/ai/src/services/: cloud_tasks_auth.py  database.py  document_processor.py  embeddings.py  estimate_runner.py  gemini.py  grok.py  interview_initializer.py  interviewer.py  llm.py  maintenance.py  monitoring.py  prompts.py  state.py  state_analyzer.py  vector_store.py  web_search.py
apps/ai/tests/: conftest.py  test_estimate_pipeline.py  test_health.py  test_state_analyzer.py
apps/ai/tests/fixtures/: factories.py
apps/ai/tests/integration/: test_health_router.py
apps/ai/tests/unit/: test_document_processor.py  test_interview_initializer.py  test_models.py  test_state_analyzer.py
apps/web/: .env.example  (+5 more)
database/: migrate.ts  new-migration.sh
docs/: API.md  ARCHITECTURE.md  ONBOARDING.md  SOP-processo-geral.md  competitive-brief-2026-03.md  deepwiki.md  melhorias gcp com ia. md  melhorias gcp geral.md  test-plan.md
scripts/: backfill-maturity-snapshots.ts  clear-firebase-users.mjs  clear-user-dev.sh  clear-user-prd.sh  seed-clean.ts  seed_knowledge_base.py
(+241 files in other folders)
