[project]
name = "oute-ai"
version = "0.1.0"
description = "oute.me AI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "google-genai>=1.0.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-pptx>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "crewai>=1.10.1,<2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "ruff>=0.9.0",
    "asyncpg-stubs>=0.30.0",
    "types-openpyxl>=3.1.0",
    "pandas-stubs>=2.2.0",
    "types-PyYAML>=6.0.0",
    "types-beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
